fixed list alignment issues

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body, nav, h1, h2, a {
+body, ul, li, h1, h2, a {
     margin: 0px;
     font-family: arial;
     padding: 0px;
